tests/compile-fail/integration_suite__integration__general__jump_missing_label.snap
---
source: tests/integration/general.rs
expression: stderr
---
error: undefined label 'label'
   ┌─ <input>:21:14
   │
21 │         goto label;
   │              ^^^^^ there is no label by this name


